--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,48 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0px;
+    padding: 0px;
+}
+body p, body a, body li, body button, body span {
+    letter-spacing: 1px;
+}
+.site-container {
+    max-width: 1440px;
+    padding: 0 20px;
+    margin: auto;
+}
+.topbar-inner {
+    display: flex
+;
+    justify-content: space-between;
+}
+.logo_inner {
+    display: flex;
+    align-items: baseline; 
+}
+.phone_icon img {
+    max-height: 18px;
+    margin-right: 10px;
+}
+.social_icon {
+    display: flex;
+}
+.whtsApp a {
+    text-transform: capitalize;
+    font-size: 14px !important;
+    text-decoration: none;
+    color: #212121;
+    letter-spacing: 1px;
+
+}
+.log img {
+    max-height: 45px;
+}
+.navbar a
+{color: #2a2a2a;
+font-size: 16px;
+margin: 0 5px;
+letter-spacing: 1px;
+text-decoration: none;
+list-style: none;
+}
