--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,85 @@
-<div class="homebanner">
-    <div class="site-container">
-        <div class="home-slide-content">
-            <div class="home-slide-column">
-              <div class="inner-home-slide">
-                <h1 class="text-light">New Collection</h1>
-              </div>
-            </div>
-            <div class="home-slide-btn">
-                <button type="button" class="ml-4 btn btn-dark">FIND OUT NOW</button>
-            </div>
-          </div>
-          
+<div class="homebanner w-full">
+  <div class="site-container">
+    <div class="home-slide-content">
+      <div class="home-slide-column">
+        <div class="inner-home-slide">
+          <h1 class="text-5xl text-white font-semibold ">New Collection</h1>
+        </div>
+      </div>
+      <div class="home-slide-btn">
+        <button type="button" class="bg-black text-white text-base">FIND OUT NOW</button>
+      </div>
     </div>
+
+  </div>
 </div>
+
+<!--  -->
+
+<section class="collections py-5 lg:py-16 bg-custom-bg">
+  <div class="site-container">
+    <div class="flex flex-col md:flex-row">
+      <div class="flex-1 ">
+
+        <div class="flex">
+          <div class="w-1/2 fc-items overflow-hidden"><img class="transition duration-500 ease-in-out hover:scale-110"
+              src="/assets/images/square1.png" alt="..."></div>
+          <div class="w-1/2 fc-items flex flex-col justify-center bg-white p-4">
+            <h6>OUR PRODUCTS</h6>
+            <p class="py-3">Explore our exclusive range of bags: from timeless classics to contemporary trends, each
+              model is designed to suit every woman's unique style.</p>
+            <button class="w-4/5 bg-black  text-white py-2.5 rounded-lg">View all collections</button>
+          </div>
+        </div>
+        <div class="flex mb-4">
+          <div class="w-1/2 fc-items flex flex-col justify-center bg-white p-4">
+            <h6>OUR PRODUCTS</h6>
+            <p class="py-3">Explore our exclusive range of bags: from timeless classics to contemporary trends, each
+              model is designed to suit every woman's unique style.</p>
+            <button class="w-4/5 bg-black  text-white py-2.5 rounded-lg">View all collections</button>
+          </div>
+          <div class="w-1/2 fc-items overflow-hidden"><img
+              class="max-w-none transition duration-500 ease-in-out hover:scale-110" src="/assets/images/square2.png"
+              alt="..."></div>
+        </div>
+      </div>
+      <div class="flex-1  p-4">
+        <app-carousel></app-carousel>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section class="latest-product py-16">
+  <div class="site-container">
+    <h2 class="text-center text-4xl font-medium tracking-wider">Latest Products</h2>
+    <p class="text-center mb-12 text-gray">Buy Now</p>
+    <div class="latest-product-main flex flex-row gap-4">
+      <div class="w-1/4">
+        <div class="overflow-hidden"><img class="transition duration-500 ease-in-out hover:scale-110" src="/assets/images/CPO0252.jpg" alt=""></div>
+        <div><h6 class="flex gap-4"><del>€100</del><span>€50</span></h6></div>
+        <div><h5 class="text-lg font-semibold tracking-wider">Patty model var 18</h5></div>
+      </div>
+      <div class="w-1/4">
+        <div class="overflow-hidden"><img class="transition duration-500 ease-in-out hover:scale-110" src="/assets/images/CPO0252.jpg" alt=""></div>
+        <div><h6 class="flex gap-4"><del>€100</del><span>€50</span></h6></div>
+        <div><h5 class="text-lg font-semibold tracking-wider">Patty model var 16</h5></div>
+      </div>
+      <div class="w-1/4">
+        <div class="overflow-hidden"><img class="transition duration-500 ease-in-out hover:scale-110" src="/assets/images/CPO0252.jpg" alt=""></div>
+        <div><h6 class="flex gap-4"><del>€100</del><span>€50</span></h6></div>
+        <div><h5 class="text-lg font-semibold tracking-wider">Patty model var 14</h5></div>
+      </div>
+      <div class="w-1/4">
+        <div class="overflow-hidden"><img class="transition duration-500 ease-in-out hover:scale-110" src="/assets/images/CPO0252.jpg" alt=""></div>
+        <div><h6 class="flex gap-4"><del>€100</del><span>€50</span></h6></div>
+        <div><h5 class="text-lg font-semibold tracking-wider">Patty model var 9</h5></div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<app-model-slider></app-model-slider>
+
+<app-product-slider></app-product-slider>
