--- a/src/app/model-slider/model-slider.component.css
+++ b/src/app/model-slider/model-slider.component.css
@@ -9,6 +9,7 @@
     display: block;           /* Prevent extra space below images */
   }
   .slick-prev {
-    left: 15px !important;
-    z-index: 1 !important;
+    left: -25px;
+    z-index: 1;
+    background: #000;
 }
