--- a/src/app/product-slider/product-slider.component.html
+++ b/src/app/product-slider/product-slider.component.html
@@ -1,25 +1,29 @@
 
 <div class="px-4 sm:px-6">
-    <!-- Flex container for desktop and mobile responsiveness -->
-       <!-- Left Section (Text and Button) -->
        <div class="text-center md:text-left w-full">
         <h4 class="text-3xl font-medium mb-4 text-center">
             You May Like
         </h4>
-        
       </div>
-
-      
-    
-  
-      <!-- Slick Carousel Section -->
-      <div class="slick-carousel mt-6 w-9/12">
-        <div><img src="/assets/images/L8-min.jpg" alt="Image 1"></div>
+      <div class="slick-carousel mt-6">
+        <div class=" duration-700 ease-in-out" data-carousel-item>
+            <img src="/assets/images/L8-min.jpg" class="block w-full h-full " alt="...">
+        </div>
+        <div class="duration-700 ease-in-out" data-carousel-item>
+            <img src="/assets/images/L8-min.jpg" class=" block w-full " alt="...">
+        </div>
+        <div class="duration-700 ease-in-out" data-carousel-item>
+            <img src="/assets/images/L8-min.jpg" class="block w-full" alt="...">
+        </div>
+        <!-- <div><img src="/assets/images/L8-min.jpg" alt="Image 1"></div>
         <div><img src="/assets/images/L7-min.jpg" alt="Image 2"></div>
         <div><img src="/assets/images/L6-min.jpg" alt="Image 3"></div>
         <div><img src="/assets/images/L5-min.jpg" alt="Image 4"></div>
         <div><img src="/assets/images/L4plus-min.jpg" alt="Image 5"></div>
         <div><img src="/assets/images/L7-min.jpg" alt="Image 6"></div>
+        <div><img src="/assets/images/L6-min.jpg" alt="Image 3"></div>
+        <div><img src="/assets/images/L5-min.jpg" alt="Image 4"></div> -->
+       
       </div>
     
   </div>
