--- a/src/app/collections/collections.component.html
+++ b/src/app/collections/collections.component.html
@@ -22,7 +22,7 @@
                 id="color-{{ color.id }}" 
                 [value]="color.name"
                 [checked]="selectedTerm === color.id" 
-                (change)="onTermClick(color.id, $event)"
+      
               />
               <label class="capitalize" for="color-{{ color.id }}">{{ color.name }}</label>
             </div>
@@ -37,7 +37,8 @@
             </div>
             <div class="product-info">
               <p class="py-5" [innerHTML]="product.price_html"></p>
-              <h3 class="text-black text-2xl font-normal">{{ product.name }}</h3>
+              <h3 class="text-black text-2xl font-normal mb-3">{{ product.name }}</h3>
+              <a  [routerLink]="['/product', product.id]" class="product-link bg-black text-white py-2 px-3">View Product</a>
             </div>
           </div>
         </div>
