--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -117,7 +117,8 @@
               </a>
             </li>
             <li>
-              <a href="#" class="flex items-center">
+              <a routerLink="/cart" class="flex items-center">
+                <span class="cart-total"></span>
                 <img src="/assets/images/cart.png" alt="Cart" class="h-5 mr-1">
                 Cart
               </a>
