shoping compoent added

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -116,12 +116,13 @@
                 Research
               </a>
             </li>
-            <li>
+            <li class="group relative">
               <a routerLink="/cart" class="flex items-center">
                 <span class="cart-total"></span>
                 <img src="/assets/images/cart.png" alt="Cart" class="h-5 mr-1">
                 Cart
               </a>
+              <app-shopping-cart></app-shopping-cart>
             </li>
             <li>
               <a href="#" class="border border-gray-800 text-black-800 px-4 py-3 rounded tracking-wider">
