--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -29,7 +29,12 @@
         </div>
         <div class="flex justify-between w-3/5">
           <p class="font-normal">{{ product.price | currency }}</p>
-          <p class="font-normal">{{ product.price | currency }}</p>
+          <div class="number">
+            <span class="minus">-</span>
+            <input type="text" value="1"/>
+            <span class="plus">+</span>
+          </div>  
+                 
           <button (click)="removeFromCart(product)">X</button>
         </div>
       </div>
