new modify file edit

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,8 +1,8 @@
 <div class="site-container">
 
   <!-- Check if the cart is empty -->
-  <div *ngIf="cart.length === 0" class="empty-cart py-10 text-center text-2xl w-64">
-    <p>Your cart is empty.</p>
+  <div *ngIf="cart.length === 0" class="empty-cart py-10 text-center text-2xl">
+    <p class="text-center">Your cart is empty.</p>
   </div>
 
   <!-- Display cart items -->
