--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -116,7 +116,7 @@
                 Research
               </a>
             </li>
-            <li class="group relative z-10">
+            <li class="group cart_nav relative z-10">
               <a routerLink="/cart" class="flex items-center text-light_black">
                 <span *ngIf="cartCount > 0"
                   class="cart-total absolute rounded-full text-white bg-red-600 h-6 w-6 flex justify-center content-center bottom-4 left-2">{{ cartCount }}
