--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,26 +1,36 @@
 <div class="site-container">
+
+   <!-- Breadcrumbs Section -->
+   <nav class="breadcrumbs py-5">
+    <ng-container *ngFor="let breadcrumb of breadcrumbs; let last = last">
+      <a *ngIf="!last" [routerLink]="breadcrumb.url" class="text-gray hover:underline">
+        {{ breadcrumb.label }}
+      </a>
+      <span *ngIf="last">{{ breadcrumb.label }}</span>
+      <span *ngIf="!last"> / </span>
+    </ng-container>
+  </nav>
+
+
   <div *ngIf="isLoading">Loading product details...</div>
-
-
   <div *ngIf="errorMessage">{{ errorMessage }}</div>
-<div class="product_main grid grid-cols-2 gap-4 py-10">
-  <div *ngIf="!isLoading && product">
-    <img [src]="product.images[0]?.src" alt="{{ product.name }}" *ngIf="product.images && product.images.length > 0" />
-    <h2 class="py-2">{{ product.name }}</h2>
+  <div class="product_main grid grid-cols-2 gap-4 py-10">
+    <div *ngIf="!isLoading && product">
+      <img [src]="product.images[0]?.src" alt="{{ product.name }}"
+        *ngIf="product.images && product.images.length > 0" />
+      <h2 class="py-2">{{ product.name }}</h2>
 
-    <p class="py-2" [innerHTML]="product.price_html"></p>
+      <p class="py-2" [innerHTML]="product.price_html"></p>
 
-    <button class="bg-black text-white py-2 px-5 rounded-xl" (click)="addToCart()">Add to Cart</button>
+      <button class="bg-black text-white py-2 px-5 rounded-xl" (click)="addToCart()">Add to Cart</button>
 
-    <!-- Display a fallback message if no image is available -->
-    <p *ngIf="!product.images || product.images.length === 0">No image available</p>
+      <!-- Display a fallback message if no image is available -->
+      <p *ngIf="!product.images || product.images.length === 0">No image available</p>
+    </div>
+    <div class="productdescription">
+      <h2 class="text-3xl py-5">Description</h2>
+      <div class="text-lg" [innerHTML]="product.description"></div>
+      <h3 class="text-3xl py-3">Product Information</h3>
+    </div>
   </div>
-  <div class="productdescription">
-    <h2 class="text-3xl py-5">Description</h2>
-    <div class="text-lg" [innerHTML]="product.description"></div>
-    <h3 class="text-3xl py-3">Product Information</h3>
-  </div>
-</div>
- 
-  
 </div>
