--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -51,6 +51,10 @@
         <li class="flex justify-between"><label for="">Total:</label>
           <span>{{ getTotal() | currency }}</span>
         </li>
+        <li class="flex justify-between">
+          <label>Shipping:</label>
+          <span>Free Shipping</span>
+        </li>
       </ul>
     </div>
   </div>
